# PointToMesh

./: .gitattributes  .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  README.md  check_deps.bat  check_deps.sh  main.cpp  start-vscode-dev.bat  vcpkg.json
Py_tools/: generate_sphere.py
TestExamples/: ball_2M_n.ply  cube_2M_n.ply  cube_hole_2M_n.ply
resources/: resources.qrc
resources/shaders/: basic.frag  basic.vert  normals.frag  normals.geom  normals.vert
src/DataProcess/: BaseInputParameter.h  CGALPointCloudProcessor.cpp  CGALPointCloudProcessor.h  PointCloudProcessor.h
src/Model/: Geometry.h
src/Presentation/: PointCloudController.cpp  PointCloudController.h  ProcessingWorker.cpp  ProcessingWorker.h  SettingsManager.cpp  SettingsManager.h  ViewSettingsBinder.cpp  ViewSettingsBinder.h
src/Rendering/: Camera.cpp  Camera.h  RenderConfig.h  RenderView.cpp  RenderView.h  Renderer.cpp  Renderer.h  ShaderLibrary.cpp  ShaderLibrary.h
src/Rendering/Threading/: RenderWorker.cpp  RenderWorker.h
src/Settings/: SettingsManager.cpp  SettingsManager.h  ViewSettingsBinder.cpp  ViewSettingsBinder.h  WindowStateGuard.cpp  WindowStateGuard.h
src/UI/: ColorSwatch.cpp  ColorSwatch.h  ParameterDialog.cpp  ParameterDialog.h  PointSizeControlWidget.cpp  PointSizeControlWidget.h  ScalarControlWidget.h  ViewSettingsDialog.cpp  ViewSettingsDialog.h  ViewSettingsDialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  splitplanedocker.cpp  splitplanedocker.h  splitplanedocker.ui
src/UI/CustomUI/: LogPanel.cpp  LogPanel.h  ScalarControlWidget.cpp
